fix: remove top:2px on chunkButtons causing overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -225,7 +225,6 @@ h4 {
   padding: 2px 8px !important;
   position: absolute !important;
   inset-inline-end: 5px !important;
-  top: 2px !important;
 }
 .cm-deletedChunk button {
   border: 1px solid !important;
